<resources>
    <string name="app_name">My Application</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="enter_name">Name</string>
    <string name="submit">Save</string>
    <string name="show_listview">Show List</string>
    <string name="insertData">Insert Data</string>
</resources>